app-form: added re-ordering preview image function

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "template"
   ],
   "bin": {
-    "app-form": "./bin/index.js"
+    "app-form": "bin/index.js"
   },
   "scripts": {
     "build": "tsup"
