--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "app-form",
   "version": "1.0.15",
   "description": "Reusable form components with react-hook-form, zod, and shadcn/ui",
-  "main": "./dist/index.js",
-  "types": "dist/index.d.ts",
+  "type": "commonjs",
+  "bin": {
+    "app-form": "dist/cli.js"
+  },
   "files": [
     "dist",
     "template"
   ],
-  "bin": {
-    "app-form": "bin/index.js"
-  },
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [],
   "author": "Rahat",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^25.0.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "tsup": "^8.5.0",
