--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,10 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
-    "jsx": "react-jsx",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
+    "module": "CommonJS",
     "strict": true,
-    "declaration": true,
-    "outDir": "dist"
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
